# tuifi

./: CMakeLists.txt  README.md  build.sh  flake.nix
include/: AppMenu.hpp  Application.hpp  CompSearchBar.hpp  DesktopFile.hpp  IconMap.hpp  MenuData.hpp
src/: AppMenu.cpp  Application.cpp  CompSearchBar.cpp  DesktopFile.cpp  IconMap.cpp  main.cpp
